# project-journal

./: .prettierrc  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yaml
src/: App.css  App.tsx  Notes.tsx  ProjectSettings.tsx  Settings.tsx  db.ts  generation.test.ts  generation.ts  globals.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
